# someboringstuff

./: CMakeLists.txt
CMake/: AddBoost.cmake  AddTest.cmake
simple-fsm-hana/: CMakeLists.txt
simple-fsm-hana/tests/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  main.cpp
tests/adapter/: CMakeLists.txt  adapter.hpp
