project(hanafsm C CXX)
cmake_minimum_required(VERSION 3.8.2)

if(WIN32)
set(BOOST_ROOT "C:/boost_1_66_0/boost_1_66_0")
set(BOOST_LIBRARYDIR "C:/boost_1_66_0/boost_1_66_0/stage/lib")
endif(WIN32)

find_package(Boost )
FUNCTION(boost_map_components_to_libnames libs out_libs)
    FOREACH(l ${libs})
		if(WIN32)
			FIND_LIBRARY(LIB_${l} NAMES libboost_${l}-vc141-mt-gd-x64-1_66.lib PATHS ${BOOST_LIBRARYDIR})
		else(WIN32)
			FIND_LIBRARY(LIB_${l} NAMES libboost_${l}.so)
		endif(WIN32)
        MARK_AS_ADVANCED(LIB_${l})
        LIST(APPEND boost_libs ${LIB_${l}})
    ENDFOREACH(l)

    SET(${out_libs} ${boost_libs} PARENT_SCOPE)
ENDFUNCTION()

function(addTest target_name libs)
	add_executable(${target_name} "")
	target_sources(${target_name} PRIVATE "${CMAKE_CURRENT_LIST_DIR}/${target_name}.cpp")
	target_include_directories(${target_name} PUBLIC ${Boost_INCLUDE_DIRS} ${CMAKE_SOURCE_DIR}/include)
	boost_map_components_to_libnames(${libs} deps)
	target_link_libraries(${target_name} PUBLIC ${deps})
endfunction(addTest)

add_subdirectory(tests)